--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "dependencies": {
     "angular": "^1.6.4",
+    "angular-confirm1": "^1.1.0",
     "angular-sanitize": "^1.6.4",
+    "angular-toastr": "^2.1.1",
     "angular-ui-router": "^1.0.3",
     "ng-tags-input": "^3.2.0",
     "ngstorage": "^0.3.11",
