--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
   "dependencies": {
     "angular": "^1.6.4",
     "angular-confirm1": "^1.1.0",
+    "angular-cookies": "^1.6.4",
+    "angular-moment": "^1.0.1",
     "angular-sanitize": "^1.6.4",
     "angular-toastr": "^2.1.1",
+    "angular-tooltips": "^1.2.1",
+    "angular-translate": "^2.15.1",
     "angular-ui-router": "^1.0.3",
+    "angularfire": "^2.3.0",
+    "c3-angular": "^1.3.1",
+    "checklist-model": "^0.11.0",
+    "moment": "^2.18.1",
     "ng-tags-input": "^3.2.0",
     "ngstorage": "^0.3.11",
     "oclazyload": "^1.1.0"
